--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "mongoose": "^6.1.4",
         "morgan": "^1.10.0",
         "multer": "^1.4.4",
+        "node-fetch": "^2.6.1",
         "pug": "^3.0.2"
     },
     "devDependencies": {
