--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "Node JS, Express, MongoDB and ES6",
     "main": "src/init.js",
     "scripts": {
-        "dev": "nodemon --exec babel-node src/init.js"
+        "dev": "nodemon",
+        "assets": "webpack"
     },
     "repository": {
         "type": "git",
@@ -27,12 +28,21 @@
         "morgan": "^1.10.0",
         "multer": "^1.4.4",
         "node-fetch": "^2.6.1",
-        "pug": "^3.0.2"
+        "pug": "^3.0.2",
+        "regenerator-runtime": "^0.13.9"
     },
     "devDependencies": {
         "@babel/core": "^7.16.5",
         "@babel/node": "^7.16.5",
         "@babel/preset-env": "^7.16.5",
-        "nodemon": "^2.0.15"
+        "babel-loader": "^8.2.3",
+        "css-loader": "^6.5.1",
+        "mini-css-extract-plugin": "^2.4.5",
+        "nodemon": "^2.0.15",
+        "sass": "^1.45.2",
+        "sass-loader": "^12.4.0",
+        "style-loader": "^3.3.1",
+        "webpack": "^5.65.0",
+        "webpack-cli": "^4.9.1"
     }
 }
